all-sourcecode/learn-terraform-provision-eks-cluster/nginx-k8s-deploy/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-svc
  namespace: test
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
